Strategies: Try to run dispatcher-provider.